--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
-    <div id="go">Click Here</div>
-    <div id="question">Here is where the question will be</div>
+    <div class="jumbotron"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md 6">
+            <div class="panel panel-default">
+                <div class="panel-heading"></div>
+                  <div class="panel-body">
+                    <button id="go" type="button" class="btn btn-primary" glyphicon="glyphicon-facetime-video" name="button">Click Here to Start Your Trivia!</button>
+                  </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">Question:</div>
+                  <div id="question" class="panel-body"></div>
+              </div>
+          </div>
+        </div>
+      </div>
 
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
