--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
   </head>
   <body>
     <div class="jumbotron">
-      <div class="panel-body">
+      <div class="start-button">
         <button id="go" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-facetime-video"></span>Click Here to Start Your Trivia!</button>
       </div>
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="1000" aria-valuemin="0" aria-valuemax="1000" style="width: 100%;"></div>
-      </div>
+
     </div>
       <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="1000" aria-valuemin="0" aria-valuemax="1000" style="width: 100%;"></div>
+            </div>
+          </div>
+        </div>
         <div class="row">
             <div class="col-md-6">
               <div class="panel panel-default">
@@ -26,19 +31,6 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="panel panel-default">
-                <div class="panel-heading">Results:</div>
-                  <div class="panel-body">
-                    <div id="questions"></div>
-                    <div id="correct"></div>
-                    <div id="incorrect"></div>
-                    <div id="score"></div>
-                  </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
               <div class="panel panel-default">
                 <div class="panel-heading">Answers:</div>
                   <div id="answers" class="panel-body">
@@ -49,6 +41,19 @@
                       <button id="answer4" class="btn btn-default" type="button" name="button"></button>
                     </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="panel panel-default">
+                <div class="panel-heading">Results:</div>
+                  <div class="panel-body">
+                    <div id="questions"></div>
+                    <div id="correct"></div>
+                    <div id="incorrect"></div>
+                    <div id="score"></div>
+                  </div>
               </div>
             </div>
           </div>
