--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-md-12">
+            <div class="panel panel-default">
+                <div id="score" class="panel-body"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
             <div class="col-md-6">
               <div class="panel panel-default">
                 <div class="panel-heading">Question:</div>
