--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading">Answers:</div>
                   <div id="answers" class="panel-body">
-                    <div class="btn-group-vertical" role="group">
+                    <div id="btn-group" class="btn-group-vertical" role="group">
                       <button id="answer1" class="btn btn-default" type="button" name="button"></button>
                       <button id="answer2" class="btn btn-default" type="button" name="button"></button>
                       <button id="answer3" class="btn btn-default" type="button" name="button"></button>
