--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Triva Game</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
     <div class="jumbotron">
@@ -42,31 +42,58 @@
                 <div class="panel-heading">Answers:</div>
                   <div id="answers" class="panel-body">
                     <div id="btn-group" class="btn-group-vertical" role="group">
-                      <button id="answer1" class="btn btn-default" type="button" name="button"></button>
-                      <button id="answer2" class="btn btn-default" type="button" name="button"></button>
-                      <button id="answer3" class="btn btn-default" type="button" name="button"></button>
-                      <button id="answer4" class="btn btn-default" type="button" name="button"></button>
-                    </div>
-                </div>
-              </div>
-            </div>
-          </div>
+                      <button id="answer1" class="btn btn-default correct" type="button" name="button"></button>
+                      <button id="answer2" class="btn btn-default wrong" type="button" name="button"></button>
+                      <button id="answer3" class="btn btn-default wrong" type="button" name="button"></button>
+                      <button id="answer4" class="btn btn-default wrong" type="button" name="button"></button>
+                    </div> <!-- end button group for answers -->
+                </div> <!-- end answers panel body -->
+              </div> <!-- end panel default -->
+            </div> <!-- end second col -->
+          </div> <!-- end third row -->
           <div class="row">
             <div class="col-md-12">
               <div class="panel panel-default">
                 <div class="panel-heading">Results:</div>
                   <div class="panel-body">
-                    <div id="questions"></div>
-                    <div id="correct"></div>
-                    <div id="incorrect"></div>
-                    <div id="score"></div>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="panel-body">
+                          <div>Questions Answered: </div>
+                          <div>Questions Correct: </div>
+                          <div>Questions Incorrect: </div>
+                          <div>Total Score:  </div>
+                        </div> <!-- end panel body to hold titles for results -->
+                      </div> <!-- end md col -->
+                      <div class="col-md-6">
+                        <div class="panel-body">
+                          <div id="questions"></div>
+                          <div id="correct"></div>
+                          <div id="incorrect"></div>
+                          <div id="total-score"></div>
+                        </div> <!-- end results panel body -->
+                      </div> <!-- end md col -->
+                    </div> <!-- end inner row -->
+                  </div> <!-- end panel body -->
+              </div> <!-- end panel default -->
+            </div> <!-- end full page column -->
+          </div> <!-- end fourth row -->
+        </div> <!-- end container -->
 
+  <!-- Just trying to play around with Modals here -->
+ <!-- <div class="modal fade" id="myModal" role="dialog">
+   <div class="modal-dialog"> -->
+
+     <!-- Modal content-->
+     <!-- <div class="modal-content">
+       <div class="modal-header">
+         <h4 class="modal-title">Get Ready!</h4>
+       </div>
+       <div class="modal-body"></div>
+     </div>
+
+   </div>
+ </div> -->
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
   </body>
